--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -113,7 +113,8 @@ h1 {
   justify-content: center;
   gap: 10px;
   flex-wrap: wrap;
-  margin: 14px 0 10px;
+  margin: 1px 0 10px;
+  font-size: 18px;
 }
 
 .btn {
@@ -122,8 +123,8 @@ h1 {
   --btn-bg2: #800022; /* darker burgundy */
 
   display: inline-block;
-  padding: 12px 16px;
-  border-radius: 999px;
+  padding: 15px 20px;
+  border-radius: 25px;
   text-decoration: none;
   font-weight: 800;
 
@@ -137,7 +138,7 @@ h1 {
 }
 
 .btn:hover {
-  transform: translateY(-1px);
+  transform: translateY(-4px);
   filter: brightness(1.05);
 }
 
